--- a/templates/new_door/add_status_request.html
+++ b/templates/new_door/add_status_request.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block title %} Property_Type {% endblock title %}
-{% block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Status Request Type {% endblock title %} {% block body %} {% load static %}
 <div class="col-md-12">
   <form
     id="TypeValidation"
@@ -15,12 +14,12 @@
         class="card-header card-header-rose card-header-text"
         style="font-size: 20px"
       >
-        <div class="card-text" style="padding-left: 1px">
+        <div class="card-text" style="padding-left: 0px">
           <a
-            href=" {% url 'add_property_type'%} "
+            href=" {% url 'add_status_request' %} "
             class="card-header card-header-rose card-header-text"
           >
-            <i class="material-icons">roofing</i> Property Type
+            <i class="material-icons">roofing</i> Status Request Type
           </a>
         </div>
       </div>
@@ -30,39 +29,23 @@
         {% comment %} Row1 {% endcomment %}
 
         <div class="row">
-          <label class="col-sm-2 col-form-label" for="CatId"
-            >Category Type*</label
+          {% for field in form %}
+          <label class="col-sm-2 col-form-label" for="PayType"
+            >{{ field.label }}*</label
           >
           <div class="col-sm-4">
             <div class="form-group bmd-form-group">
-              <select
-                input
+              <input
                 class="form-control"
                 type="text"
-                id="category"
-                name="category"
+                id="{{ field.id }}"
+                name="{{ field.name }}"
                 required="true"
                 aria-required="true"
-              >
-                <option selected>Select Category Type</option>
-                {% for category in categories %}
-                <option value="{{category.id}}">{{category.cat_type}}</option>
-                {% endfor %}
-              </select>
+              />
             </div>
           </div>
-        </div>
-        <div class="row">
-          <label class="col-sm-2 col-form-label" for="PrtType"
-            >Property Type*</label
-          >
-          <div class="col-sm-4">
-            <div class="form-group bmd-form-group">{{form.property_type}}</div>
-          </div>
-          <label class="col-sm-2 col-form-label" for="desc">Description*</label>
-          <div class="col-sm-4">
-            <div class="form-group bmd-form-group">{{form.desc}}</div>
-          </div>
+          {% endfor %}
         </div>
         {% comment %} Row1 end here {% endcomment %}
 
@@ -74,10 +57,17 @@
       </div>
       <hr
         style="
-          width: 100%;
+          width: 1000px;
+          border-left-width: 35‒;
+          height: 0px;
+          margin: 0px;
+          margin-right: -20px;
+          margin-left: 0px;
           font-weight: bold;
           margin-top: 1rem;
-          border-top: 5px solid rgba(145, 145, 145, 0.1);
+          margin-bottom: 1rem;
+          border: 0;
+          border-top: 5px solid rgba(0, 0, 0, 0.1);
         "
       />
       {% comment %} Main form send here {% endcomment %}
@@ -85,7 +75,7 @@
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-primary card-header-icon">
-              <h4 class="card-title">Property Type Overview</h4>
+              <h4 class="card-title">Status Request Type Overview</h4>
             </div>
             <div class="card-body">
               <div class="toolbar">
@@ -102,27 +92,24 @@
                   <thead>
                     <tr>
                       <th>ID</th>
-                      <th>Category</th>
-                      <th>Property Type</th>
+                      <th>Status Request</th>
                       <th>Description</th>
                       <th class="disabled-sorting text-right">Actions</th>
                     </tr>
                   </thead>
                   <tbody>
-                    {% if property_types %} 
-                    {% for property_type in property_types %}
+                    {% if statuses %} {% for status in statuses %}
                     <tr>
-                      <td scope="row">{{property_type.id}}</td>
-                      <td>{{property_type.category.cat_type}}</td>
-                      <td>{{property_type.property_type}}</td>
-                      <td>{{property_type.desc}}</td>
+                      <td scope="row">{{status.pk}}</td>
+                      <td>{{status.str_req}}</td>
+                      <td>{{status.desc}}</td>
                       <td class="text-right">
                         <a
-                          href="{% url 'view_property_type' property_type.pk %}"
+                          href="{% url 'view_status_request' status.pk %}"
                           class="d-inline"
                           rel="tooltip "
+                          title="View status request"
                           data-original-title="Remove "
-                          title="View property type"
                           >{% csrf_token %}
                           <div class="ripple-container success"></div>
                           <i
@@ -138,10 +125,10 @@
                         </a>
 
                         <a
-                          href="{% url 'update_property_type' property_type.pk  %} "
-                         title="Update property type"
+                          href="{% url 'update_status_request' status.pk %}"
                           class="d-inline"
-                          >
+                          title="Update status request"
+                        >
                           <div class="ripple-container success"></div>
                           <i
                             class="material-icons"
@@ -156,11 +143,10 @@
                         </a>
 
                         <a
-                          href="{% url 'delete_property_type' property_type.pk  %} "
-                          title="Delete property type"
+                          href=" {% url 'delete_status_request' status.pk %}"
                           class="d-inline"
+                          title="Delete status request"
                         >
-                    
                           <i
                             class="material-icons"
                             style="
