--- a/templates/new_door/update_ownership_type.html
+++ b/templates/new_door/update_ownership_type.html
@@ -4,7 +4,7 @@
   <div class="card">
     <br />
     <div class="row">
-      <div class="col-sm-8 offset-2">
+      <div class="col-md-12">
         <h4 class="alert alert-info">Update Ownership Type</h4>
         <form id="TypeValidation"class="form-horizontal" action=" " method="post"novalidate="novalidate" >
           {% csrf_token %}
