--- a/templates/new_door/update_tenant_request.html
+++ b/templates/new_door/update_tenant_request.html
@@ -12,58 +12,50 @@
     <div class="card">
       <br />
       <div class="row">
-        <div class="col-sm-8 offset-2">
-          <h4 class="alert alert-info">View Payment Mode Type</h4>
+        <div class="col-sm-12">
+          <h4 class="alert alert-info">Update Tenant Request Type</h4>
           <form action="" method="post">
             {% csrf_token %}
             <div class="card-body">
               <br />
               {% comment %} Row1 {% endcomment %}
-              <div class="row">
-                <label class="col-sm-3 col-form-label" for="PayType"
-                  >Payment Mode Type*</label
+              
+              {% for field in form %}
+                 <div class="row">
+                <label class="col-sm-3 col-form-label" for="TenantReqType"
+                  >{{ field.label }}*</label
                 >
                 <div class="col-sm-6">
                   <div class="form-group bmd-form-group">
                     <input
-                      readonly
                       style="background-color: #ffffff; margin-bottom: 30px"
                       class="form-control"
-                      value="{{PAYTYP.PayType}}"
+                      value="{{ field.value}}"
                       type="text"
-                      id="PayType"
-                      name="PayType"
+                      id="{{ field.id}}"
+                      name="{{ field.name}} "
                       required="true"
                       aria-required="true"
                     />
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <label class="col-sm-3 col-form-label" for="desc"
-                  >Description*</label
-                >
-                <div class="col-sm-6">
-                  <div class="form-group bmd-form-group">
-                    <input
-                      readonly
-                      style="background-color: #ffffff"
-                      class="form-control"
-                      value="{{PAYTYP.desc}}"
-                      type="text"
-                      id="desc"
-                      name="desc"
-                      required="true"
-                      aria-required="true"
-                    />
-                  </div>
-                </div>
-              </div>
+              {% endfor %}
+
             </div>
-            <br />
             <div class="modal-footer">
+              <input
+                type="submit"
+                class="btn btn-success btn-round float-right"
+                value="Update"
+                style="
+                  margin-right: 13px;
+                  margin-bottom: 20px;
+                  margin-top: 20px;
+                "
+              />
               <a
-                href="{% url 'PayMode_Type'%}"
+                href="{% url 'add_tenant_request' %}"
                 class="btn btn-info btn-round float-right"
                 style="margin-bottom: 20px; margin-top: 20px"
               >
