--- a/templates/new_door/add_documents_type.html
+++ b/templates/new_door/add_documents_type.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %} {% block title %} Contract_Request_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Documents_Type {% endblock title %} {% block body %} {% load static %}
 <div class="col-md-12">
     <form id="TypeValidation" class="form-horizontal" action=" " method="post" novalidate="novalidate" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="card ">
             <div class="card-header card-header-rose card-header-text"  style="font-size: 20px;">
                 <div class="card-text" style="padding-left: 1px;">
-                <a href=" {% url 'ContractReq_Type'%} " class="card-header card-header-rose card-header-text ">
-                        <i class="material-icons ">roofing</i> Contract Request Type </a>
+                <a href=" {% url 'add_doc_type'%} " class="card-header card-header-rose card-header-text ">
+                        <i class="material-icons ">roofing</i> Documents Type </a>
                 </div>
             </div>
 
@@ -14,18 +14,14 @@
                 <br> {% comment %} Row1 {% endcomment %}
                 
                 <div class="row">
-                    <label class="col-sm-2 col-form-label" for="ContractReqType">Contract Request Type*</label>
+                    {% for field in form %}
+                    <label class="col-sm-2 col-form-label" for="PayType">{{ field.label }}*</label>
                     <div class="col-sm-4">
                         <div class="form-group bmd-form-group">
-                            <input class="form-control" type="text" id="ContractReqType" name="ContractReqType" required="true" aria-required="true">
+                            <input class="form-control" type="text" id="{{ field.id }}" name="{{ field.name }}" required="true" aria-required="true">
                         </div>
                     </div>
-                    <label class="col-sm-2 col-form-label" for="desc">Description*</label>
-                    <div class="col-sm-4">
-                        <div class="form-group bmd-form-group">
-                            <input class="form-control" type="text" id="desc" name="desc" required="true" aria-required="true">
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
                 {% comment %} Row1 end here {% endcomment %}
 
@@ -36,24 +32,13 @@
                 <br>
         
             </div>
-            <hr style="
-                    width: 1000px;
-                    border-left-width: 35‒;
-                    height: 0px;
-                    margin: 0px;
-                    margin-right: -20px;
-                    margin-left: 0px;
-                    font-weight: bold;
-                    margin-top: 1rem;
-                    margin-bottom: 1rem;
-                    border: 0;
-                    border-top: 5px solid rgba(0, 0, 0, .1);"> 
+
 {% comment %} Main form send here {% endcomment %}
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header card-header-primary card-header-icon">
-                            <h4 class="card-title">Contract Request Type Overview</h4>
+                            <h4 class="card-title">Documents Type Overview</h4>
                         </div>
                         <div class="card-body">
                             <div class="toolbar">
@@ -64,34 +49,34 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Contract Request Type</th>
+                                            <th>Documents Type</th>
                                             <th>Description</th>
                                             <th class="disabled-sorting text-right">Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% if ADCNRQ %} 
-                                        {% for TRT in ADCNRQ %}
+                                        {% if docs %} 
+                                        {% for doc in docs %}
                                         <tr>
-                                            <td scope="row">{{TRT.id}}</td>
-                                            <td>{{TRT.ContractReqType}}</td>
-                                            <td>{{TRT.desc}}</td>
+                                            <td scope="row">{{doc.pk}}</td>
+                                            <td>{{doc.docs_type}}</td>
+                                            <td>{{doc.desc}}</td>
                                             <td class="text-right">
 
-                                                <a href="{% url 'ViewContractReqType' TRT.id %} " method="post " class="d-inline " rel="tooltip " title=" " data-original-title="Remove ">{% csrf_token %}
+                                                <a href=" {% url 'view_doc_type' doc.pk %} " class="d-inline" rel="tooltip" title="View document type" data-original-title="Remove ">
                                                 <div class="ripple-container success "></div>
                                                 <i class="material-icons " style="margin-right: 10px; margin-top: 10px; margin-bottom: 20px; color: #ff9800;" >dvr</i>
                                                 </a>
                                               
 
-                                                <a href="{% url 'UpdateContractReqType' TRT.id %} " method="post " class="d-inline ">{% csrf_token %}
+                                                <a href=" {% url 'update_doc_type' doc.pk %} " class="d-inline" title="update document type">
                                                     <div class="ripple-container success "></div>
                                                     <i class="material-icons "  style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #4caf50; ">create</i>
                                                 </a>
                                                
 
-                                                <a href="{% url 'DeleteContractReqType' TRT.id %} " method="post " class="d-inline ">
-                                                    {% csrf_token %}
+                                                <a href="{% url 'delete_doc_type' doc.pk %} " class="d-inline" title="Delete document type">
+                                                    
                                                     <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
                                                     <div class="ripple-container"></div>
                                                 </a>
