--- a/templates/new_door/add_property.html
+++ b/templates/new_door/add_property.html
@@ -7,16 +7,14 @@
     novalidate="novalidate"
   >
     {% csrf_token %}
+
     <div class="card">
       <div
         class="card-header card-header-rose card-header-text"
         style="font-size: 20px"
       >
         <div class="card-text" style="padding-left: 0px">
-          <a
-            href=" "
-            class="card-header card-header-rose card-header-text"
-          >
+          <a href=" " class="card-header card-header-rose card-header-text">
             <i class="material-icons">roofing</i> Add Property
           </a>
         </div>
@@ -28,22 +26,7 @@
         <div class="row">
           <label class="col-sm-2 col-form-label">Owner Name*</label>
           <div class="col-sm-4">
-            <div class="form-group bmd-form-group">
-              <select
-                input
-                class="form-control"
-                type="text"
-                id="EntityID"
-                name="owner_name"
-                required="true"
-                aria-required="true"
-              >
-                <option selected>Select Owner's Name</option>
-                {% for user in profiles %}
-                <option value="{{user.id}}">{{user.user}}</option>
-                {% endfor %}
-              </select>
-            </div>
+            <div class="form-group bmd-form-group">{{ form.owner_name }}</div>
           </div>
           <label class="col-sm-2 col-form-label">Property Name*</label>
           <div class="col-sm-4">
@@ -128,7 +111,7 @@
         {% comment %} Row6 end {% endcomment %}
 
         <br />
-        <button class="btn btn-rose btn-round" type="Submit">
+        <button class="btn btn-rose btn-round float-right" type="Submit">
           <i class="material-icons">near_me </i> Submit
           <div class="ripple-container"></div>
         </button>
