--- a/templates/new_door/entity_overview.html
+++ b/templates/new_door/entity_overview.html
@@ -62,9 +62,8 @@
                 <td class="text-right">
                   <a
                     href=" {% url 'property_overview' entity.entity_name %} "
-                    method="post "
-                    class="d-inline"
-                    >{% csrf_token %}
+                    class="d-inline" title="View properties"
+                    >
                     <div class="ripple-container success"></div>
                     <i
                       class="material-icons"
@@ -82,7 +81,8 @@
                     class="d-inline"
                     rel="tooltip"
                     data-original-title="Remove"
-                    >{% csrf_token %}
+                    title="View entities"
+                    >
                     <div class="ripple-container success"></div>
                     <i
                       class="material-icons"
@@ -98,9 +98,8 @@
 
                   <a
                     href="{% url 'update_entity' entity.pk %}"
-                    method="post"
-                    class="d-inline"
-                    >{% csrf_token %}
+                    class="d-inline" title="Update entity"
+                    >
                     <div class="ripple-container success"></div>
                     <i
                       class="material-icons"
@@ -116,10 +115,8 @@
 
                   <a
                     href="{% url 'delete_entity' entity.pk %}"
-                    method="post"
-                    class="d-inline"
+                    class="d-inline" title="Delete entity"
                   >
-                    {% csrf_token %}
                     <i
                       class="material-icons"
                       style="
