--- a/templates/new_door/update_occupancy_type.html
+++ b/templates/new_door/update_occupancy_type.html
@@ -32,12 +32,18 @@
             {% endfor %}
           </div>
           <div class="modal-footer">
+            <input
+              type="submit"
+              class="btn btn-success btn-round float-right"
+              value="Update"
+              style="margin-right: 13px; margin-bottom: 20px; margin-top: 20px"
+            />
             <a
-              href="{% url 'add_ownership_type'%}"
+              href="{% url 'add_occupancy_type' %}"
               class="btn btn-info btn-round float-right"
               style="margin-bottom: 20px; margin-top: 20px"
             >
-              Back
+              Close
             </a>
           </div>
         </form>
