--- a/templates/new_door/update_payment_mode.html
+++ b/templates/new_door/update_payment_mode.html
@@ -12,7 +12,7 @@
     <div class="card">
       <br />
       <div class="row">
-        <div class="col-sm-8 offset-2">
+        <div class="col-md-12">
           <h4 class="alert alert-info">Update Payment Mode Type</h4>
           <form action="" method="post">
             {% csrf_token %}
@@ -28,10 +28,10 @@
                     <input
                       style="background-color: #ffffff; margin-bottom: 30px"
                       class="form-control"
-                      value="{{PAYTYP.PayType}}"
+                      value="{{payment_mode.pay_type}}"
                       type="text"
-                      id="PayType"
-                      name="PayType"
+                      id="pay_type"
+                      name="pay_type"
                       required="true"
                       aria-required="true"
                     />
@@ -47,7 +47,7 @@
                     <input
                       style="background-color: #ffffff"
                       class="form-control"
-                      value="{{PAYTYP.desc}}"
+                      value="{{payment_mode.desc}}"
                       type="text"
                       id="desc"
                       name="desc"
@@ -71,28 +71,13 @@
                 "
               />
               <a
-                href="{% url 'PayMode_Type'%}"
+                href="{% url 'add_payment_mode'%}"
                 class="btn btn-info btn-round float-right"
                 style="margin-bottom: 20px; margin-top: 20px"
               >
                 Close
               </a>
             </div>
-            {% comment %}
-            <a
-              href="{% url 'Documents_Type'%}"
-              class="btn btn-info btn-round float-right"
-              style="margin-bottom: 30px; margin-top: 30px; margin-right: 280px"
-            >
-              Back
-            </a>
-            <input
-              type="submit"
-              class="btn btn-success btn-round float-right"
-              value="Update"
-              style="margin-right: 13px"
-            />
-            {% endcomment %}
           </form>
         </div>
       </div>
