--- a/templates/new_door/update_unit.html
+++ b/templates/new_door/update_unit.html
@@ -24,137 +24,121 @@
             {% csrf_token %}
             <div class="card-body">
               <div class="row">
-                {% for field in form %}
-                <label class="col-sm-2 col-form-label"
-                  >{{ field.label }}*</label
+                <label class="col-sm-2 col-form-label" for="PropID"
+                  >Property Name*</label
                 >
-
-                {% if field.name == 'property_id' %}
                 <div class="col-sm-4">
                   <div class="form-group bmd-form-group">
-                    <select
-                      input
-                      class="form-control"
-                      type="text"
-                      id="{{field.id}}"
-                      name="{{field.name}}"
-                      required="true"
-                      aria-required="true"
-                    >
-                      <option selected>Select Owner' Name</option>
-                      {% for property in properties %}
-                      <option selected value="{{property.id}}">
-                        {{property.property_name}}
-                      </option>
-                      {% endfor %}
-                    </select>
+                   {{ form.property_id }}
                   </div>
                 </div>
-
-                {% elif field.name == 'property_type' %}
+                <label class="col-sm-2 col-form-label" for="PrtTypID"
+                  >Property Type*</label
+                >
                 <div class="col-sm-4">
                   <div class="form-group bmd-form-group">
-                    <select
-                      input
-                      class="form-control"
-                      type="text"
-                      id="{{field.id}}"
-                      name="{{field.name}}"
-                      required="true"
-                      aria-required="true"
-                    >
-                      <option selected>Select Entity</option>
-                      {% for property_type in property_types %}
-                      <option selected value="{{property_type.id}}">
-                        {{property_type.property_type}}
-                      </option>
-                      {% endfor %}
-                    </select>
+                    {{ form.property_type }}
                   </div>
-                </div>
-
-                {% elif field.name == 'ownership_type' %}
-                <div class="col-sm-4">
-                  <div class="form-group bmd-form-group">
-                    <select
-                      input
-                      class="form-control"
-                      type="text"
-                      id="{{field.id}}"
-                      name="{{field.name}}"
-                      required="true"
-                      aria-required="true"
-                    >
-                      <option selected>Select Entity</option>
-                      {% for ownership_type in ownership_types %}
-                      <option selected value="{{ownership_type.id}}">
-                        {{ownership_type.ownership_type}}
-                      </option>
-                      {% endfor %}
-                    </select>
-                  </div>
-                </div>
-
-                {% elif field.name == 'occupancy_type' %}
-                <div class="col-sm-4">
-                  <div class="form-group bmd-form-group">
-                    <select
-                      input
-                      class="form-control"
-                      type="text"
-                      id="{{field.id}}"
-                      name="{{field.name}}"
-                      required="true"
-                      aria-required="true"
-                    >
-                      <option selected>Select Entity</option>
-                      {% for occupancy_type in occupancy_types %}
-                      <option selected value="{{occupancy_type.id}}">
-                        {{occupancy_type.occupancy_type}}
-                      </option>
-                      {% endfor %}
-                    </select>
-                  </div>
-                </div>
-
-                {% else %}
-
-                <div class="col-sm-4">
-                  <div class="form-group bmd-form-group">
-                    <input
-                      class="form-control"
-                      value="{{ field.value }}"
-                      type="text"
-                      id="{{field.id}}"
-                      name="{{field.name}}"
-                      required="true"
-                      aria-required="true"
-                    />
-                  </div>
-                </div>
-                {% endif %} {% endfor %}
-
-                <div class="modal-footer" style="float: right; width: 100%">
-                  <input
-                    type="submit"
-                    class="btn btn-success btn-round float-right"
-                    value="Update"
-                    style="
-                      margin-right: 13px;
-                      margin-bottom: 20px;
-                      margin-top: 20px;
-                    "
-                  />
-                  <a
-                    href=""
-                    class="btn btn-info btn-round float-right"
-                    style="margin-bottom: 20px; margin-top: 20px"
-                  >
-                    Close
-                  </a>
                 </div>
               </div>
+              {% comment %} Row2 {% endcomment %}
+              <div class="row">
+                <label class="col-sm-2 col-form-label">Flat No.*</label>
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                    {{ form.flat }}
+                  </div>
+                </div>
+                <label class="col-sm-2 col-form-label" for="OwnerTypeID"
+                  >Ownership Type*</label
+                >
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                    {{ form.ownership_type }}
+                  </div>
+                </div>
+              </div>
+
+              {% comment %} Row3 {% endcomment %}
+              <div class="row">
+                <label class="col-sm-2 col-form-label">Rental Amount*</label>
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                    {{ form.rent_amount }}
+                  </div>
+                </div>
+                <label class="col-sm-2 col-form-label">Size (SqFt)*</label>
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                    {{ form.size }}
+                  </div>
+                </div>
+              </div>
+              {% comment %} Row4 {% endcomment %}
+              <div class="row">
+                <label class="col-sm-2 col-form-label" for="OccupancyTypeID"
+                  >Occupancy*</label
+                >
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                   {{ form.occupancy_type }}
+                  </div>
+                </div>
+
+                <label class="col-sm-2 col-form-label">No. of Bedrooms*</label>
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                    {{ form.bedrooms }}
+                  </div>
+                </div>
+              </div>
+
+              {% comment %} Row5 {% endcomment %}
+              <div class="row">
+                <label class="col-sm-2 col-form-label">No. of Bathrooms*</label>
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                   {{ form.bathrooms }}
+                  </div>
+                </div>
+                <label class="col-sm-2 col-form-label">Parking*</label>
+                <div class="col-sm-4">
+                  <div class="form-group bmd-form-group">
+                    {{ form.parking }}
+                  </div>
+                </div>
+              </div>
+
+              {% comment %} Row6 {% endcomment %}
+              <div class="row">
+                <label class="col-sm-2 col-form-label">Description*</label>
+                <div class="col-sm-10">
+                  <div class="form-group bmd-form-group">
+                   {{ form.desc }}
+                  </div>
+                </div>
+              </div>
+             
             </div>
+             <div class="modal-footer">
+                <input
+                  type="submit"
+                  class="btn btn-success btn-round float-right"
+                  value="Update"
+                  style="
+                    margin-right: 13px;
+                    margin-bottom: 20px;
+                    margin-top: 20px;
+                  "
+                />
+                <a
+                  href="{% url 'property_unit_overview' unit.property_id.pk %}"
+                  class="btn btn-info btn-round float-right"
+                  style="margin-bottom: 20px; margin-top: 20px"
+                >
+                  Close
+                </a>
+              </div>
           </form>
         </div>
       </div>
