--- a/templates/new_door/view_status_request.html
+++ b/templates/new_door/view_status_request.html
@@ -12,16 +12,16 @@
     <div class="card">
       <br />
       <div class="row">
-        <div class="col-sm-8 offset-2">
-          <h4 class="alert alert-info">View Tenant Request Type</h4>
+        <div class="col-md-12">
+          <h4 class="alert alert-info">View Status Request Type</h4>
           <form action="" method="post">
             {% csrf_token %}
             <div class="card-body">
               <br />
               {% comment %} Row1 {% endcomment %}
               <div class="row">
-                <label class="col-sm-3 col-form-label" for="TenantReqType"
-                  >Tenant Request Type*</label
+                <label readonly class="col-sm-3 col-form-label" for="StRqty"
+                  >Status Request Type*</label
                 >
                 <div class="col-sm-6">
                   <div class="form-group bmd-form-group">
@@ -29,10 +29,10 @@
                       readonly
                       style="background-color: #ffffff; margin-bottom: 30px"
                       class="form-control"
-                      value="{{pi.TenantReqType}}"
+                      value="{{status_request.str_req}}"
                       type="text"
-                      id="TenantReqType"
-                      name="TenantReqType"
+                      id="str_req"
+                      name="str_req"
                       required="true"
                       aria-required="true"
                     />
@@ -49,7 +49,7 @@
                       readonly
                       style="background-color: #ffffff"
                       class="form-control"
-                      value="{{pi.desc}}"
+                      value="{{status_request.desc}}"
                       type="text"
                       id="desc"
                       name="desc"
@@ -60,14 +60,17 @@
                 </div>
               </div>
             </div>
+            <br />
 
-            <a
-              href="{% url 'TenantReq_Type'%}"
-              class="btn btn-info btn-round float-right"
-              style="margin-bottom: 30px; margin-top: 30px; margin-right: 280px"
-            >
-              Back
-            </a>
+            <div class="modal-footer">
+              <a
+                href="{% url 'add_status_request'%}"
+                class="btn btn-info btn-round float-right"
+                style="margin-bottom: 20px; margin-top: 20px"
+              >
+                Back
+              </a>
+            </div>
           </form>
         </div>
       </div>
