--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
     height: 100%;
 }
@@ -46,4 +46,4 @@ body {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-}
+} */
