--- a/templates/auth_base.html
+++ b/templates/auth_base.html
@@ -25,43 +25,8 @@
   </head>
 
   <body>
-    <!-- sidebar Start from here-->
-  {% include 'sidebar.html' %}
+{% block body %}  {% endblock %}
 
-    <!-- sidebar Start from here-->
-
-    <!-- Start main-panel -->
-    <div class="main-panel ps ps--active-y">
-      <!-- Navbar -->
-      {% include 'navbar.html' %}
-      <!-- End Navbar -->
-      <div class="content">
-        <div class="content">
-          <div class="container-fluid">
-            {% if messages %} {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} success p-3">
-              {{ message }}
-              <button
-                type="button"
-                class="close"
-                data-dismiss="alert"
-                aria-label="Close"
-              >
-                <i class="material-icons">close</i>
-              </button>
-              <span> </span>
-            </div>
-            {% endfor %} 
-            {% endif %} 
-
-            {% block body %} 
-            {% endblock body %}
-          </div>
-        </div>
-      </div>
-      {% include 'footer.html' %}
-   
-    </div>
 
     <!--   Core JS Files start from here   -->
     <script src="{% static 'js/core/jquery.min.js' %}"></script>
@@ -513,6 +478,6 @@
       });
     </script>
 
-    {% comment %} Core JS Files END from here {% endcomment %}
+
   </body>
 </html>
